--- a/styles.css
+++ b/styles.css
@@ -5,42 +5,47 @@
 }
 
 body {
-    min-height: 100vh;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(156, 41, 74);
     font-family: "Montserrat", sans-serif;
     font-size: 20px;
+    background-color: #9c294a;
+    min-height: 100vh;
 }
 
-.text {
-    margin-bottom: 20px;
-    font-size: 25px;
+.container {
+    max-width: 1140px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
 }
 
-.link {
-    color: #FFFFFF;
-    text-decoration: none;
-    cursor: default;
+.wrapper {
+    font-size: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    min-height: 100vh;
+}
+
+.wrapper h1 {
+    color: #ffffff;
+    font-size: 30px;
 }
 
 .button {
-    padding: 15px 55px;
-    border: none;
-    border-radius: 6px;
+    font-family: inherit;
     color: #282a2e;
-    background-color: #ffffff;
-    cursor: pointer;
-    box-shadow: 15px 15px 0 0 #18191C;
-    font-family: "Montserrat", sans-serif;
     font-size: 18px;
     font-weight: 700;
-    transition: box-shadow .2s ease, transform .2s ease;
-    margin: 13px;
     min-width: 13em;
+    padding: 15px 55px;
+    background-color: #ffffff;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    box-shadow: 15px 15px 0 0 #18191C;
+    transition: box-shadow .2s ease, transform .2s ease;
 }
 
 .button.submit:active {
